<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <EditText

        android:id="@+id/edtNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:hint="@string/nombre" />

    <EditText

        android:id="@+id/edtCorreo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/correo" />

    <EditText

        android:id="@+id/edtDireccion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:hint="@string/direccion" />

    <EditText

        android:id="@+id/edtTelefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginTop="16dp"
        android:hint="@string/numero_telefonico" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="380dp"
        android:drawableEnd="@android:drawable/ic_menu_save"
        android:onClick="closeActivity"
        android:text="@string/guardar" />

</LinearLayout>