<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:cardCornerRadius="40dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border"
                android:padding="50dp">

                <ImageView
                    android:id="@+id/imgRockCardView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_foto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/imgRockCardView2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_nombre"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/tvNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_correo"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/tvCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/correo"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_direccion"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/tvDireccion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_numero_telefonico"
                        android:textStyle="bold|italic"/>
                    <TextView
                        android:id="@+id/tvTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numero_telefonico"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/editar"
                    android:onClick="sendExplicit"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent">

                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:padding="15dp"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLlamar"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_llamada"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:onClick="sendLlamar">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMensaje"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_whatsapp"
                android:onClick="sendWhatsapp">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWhatsapp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_mensaje"
                android:onClick="sendMessage">
            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>